This is phplotdocs/ChangeLog, listing changes to the PHPlot Reference Manual
-----------------------------------------------------------------------------
Note: This is a more complete ChangeLog than the one in Appendix A of the
manual, which only contains summaries of changes.
-----------------------------------------------------------------------------
2010-12-03
   * reference.xml: Markup fix. Remove newlines from <synopsis> elements
     to get rid of unwanted blank lines (1 per in HTML, 2 per in PDF).

   New feature to allow suppressing X and/or Y axis lines.
   * functions.xml: Add links to 2 new functions under Axis Controls.
   * reference.xml: Document new functions SetDrawXAxis and SetDrawYAxis.
   * variables.list: Document 2 new flag variables for axis control.
   * examples/histogram.php: Use new SetDraw*Axis functions to hide the
     axis lines, instead of setting grid color to be transparent.

   * .ispell_words: Additions

2010-11-28
   Document availability of data value labels with more plot types.
   * Makefile, examples.xml, examples/linepoints.php: Add new example of
     linepoints plot with data value labels.
   * advanced.xml: New subsection under Tuning for data value label
     position control variables.
   * concepts.xml: Change data value labels subsection to mention
     newly supported plot types.
   * developer.xml: Document new internal function CheckDataValueLabels.
   * reference.xml: Update SetYDataLabelPos, works with more plot types.
   * variables.list: Add 2 new variables which control data value label
     position for the newly supported plot types.

2010-11-21
   * advanced.xml: Document new tunable parameter for legend colorbox width.
   * variables.list: New variable legend_colorbox_width.
       Added note about version for ohlc* variables.
   * etc/legend-layout.fig: Update to show adjustable colorbox width.
   * images/legend-layout.png: Regenerated from xfig source.