@@ -804,7 +804,7 @@ An example of this plot type can be seen in
 <xref linkend="ex-ohlccandlesticks"/>.
 </para>
 <para>
-This plot type was added after PHPlot-5.2.0.
+This plot type was added in PHPlot-5.3.0.
 </para>
 </sect2>
 
@@ -836,7 +836,7 @@ An example of this plot type can be seen in
 <xref linkend="ex-ohlccandlesticks2"/>.
 </para>
 <para>
-This plot type was added after PHPlot-5.2.0.
+This plot type was added in PHPlot-5.3.0.
 </para>
 </sect2>
 
@@ -956,7 +956,7 @@ An example of this plot type can be seen in
 <xref linkend="ex-ohlcbasic"/>.
 </para>
 <para>
-This plot type was added after PHPlot-5.2.0.
+This plot type was added in PHPlot-5.3.0.
 </para>
 </sect2>
 
@@ -1951,7 +1951,7 @@ PHPlot does not attempt to prevent interference between the labels and
 other plot elements.
 Use <xref linkend="SetYDataLabelPos" /> to enable Y data value labels.
 To change the position of the labels, see <xref linkend="conc-tuning-labels"/>.
-Note: data value labels for these plot types was added after PHPlot-5.2.0.
+Note: data value labels for these plot types was added in PHPlot-5.3.0.
 </para>
 <para>
 Data value labels are not available with other plot types.
